Makefile.common: use --fuzz=10 for all patch commands

--- a/Makefile.common
+++ b/Makefile.common
@@ -19,7 +19,8 @@ RPM_DEFINES := --define "_sourcedir $(SOURCEDIR)" \
 		--define "_builddir $(BUILDDIR)" \
 		--define "_srcrpmdir $(SRCRPMDIR)" \
 		--define "_rpmdir $(RPMDIR)" \
-		--define "version $(VERSION)"
+		--define "version $(VERSION)" \
+		--define "_default_patch_fuzz 10"
 
 VER_REL := $(shell rpm $(RPM_DEFINES) -q --qf "%{VERSION} %{RELEASE}\n" --specfile $(SPECFILE)| head -1)
 
