3-stage build process
This still sucks, as the user must install kdelibs, and kdelibs-devel
after the 1-st stage, and then resume the build (using make rpms).

But at least we avoid building stuff twice.

There is one problem for the 3-rd stage though (currently kdemultimedia):
it requires kdebase-workspace-devel, which itself requires kdebase-workspace-libs,
which itself requires a bunch of other rpms. Currently I just install the -devel with
--nodeps options and it works. But this is far from elegant solution ;)

--- a/Makefile.common
+++ b/Makefile.common
@@ -55,9 +55,12 @@ ifneq ($(SRC_FILE), None)
 	@echo "OK."
 endif
 
+.PHONY: verify-sources
+
 verify-sources:
 # This is a temporary hack, until KDE project starts properly signing their tarballs...
 ifneq ($(SRC_FILE), None)
+	@echo "Veryfing sources for $(NAME)..."
 	@md5sum -c sources-$(VERSION)
 endif
 
