--- a/Makefile.common
+++ b/Makefile.common
@@ -13,6 +13,7 @@ BUILDDIR ?= $(WORKDIR)
 RPMDIR ?= $(WORKDIR)/../rpm
 SOURCEDIR := $(WORKDIR)
 VERSION := $(shell cat ../version)
+REL := $(shell cat ../rel)
 
 RPM_DEFINES := --define "_sourcedir $(SOURCEDIR)" \
 		--define "_specdir $(SPECDIR)" \
@@ -20,6 +21,7 @@ RPM_DEFINES := --define "_sourcedir $(SOURCEDIR)" \
 		--define "_srcrpmdir $(SRCRPMDIR)" \
 		--define "_rpmdir $(RPMDIR)" \
 		--define "version $(VERSION)" \
+		--define "rel $(REL)" \
 		--define "_default_patch_fuzz 3"
 
 VER_REL := $(shell rpm $(RPM_DEFINES) -q --qf "%{VERSION} %{RELEASE}\n" --specfile $(SPECFILE)| head -1)
