--- a/kde-settings/Makefile
+++ b/kde-settings/Makefile
@@ -1,7 +1,9 @@
 NAME := kde-settings
-SRC_FILE := None
 SPECFILE = $(firstword $(wildcard *.spec))
 
 MAKEFILE_COMMON := ../Makefile.common
 
 include $(MAKEFILE_COMMON)
+
+verify-sources:
+	@md5sum --quiet -c sources-4.9
