makefile: change include method in kde-settings
Overriding one target is illegal, so "include" only not already
defined recipes.

--- a/kde-settings/Makefile
+++ b/kde-settings/Makefile
@@ -3,7 +3,11 @@ SPECFILE = $(firstword $(wildcard *.spec))
 
 MAKEFILE_COMMON := ../Makefile.common
 
-include $(MAKEFILE_COMMON)
-
 verify-sources:
 	@md5sum --quiet -c sources-4.9
+
+export NAME SPECFILE
+
+%: force
+	@$(MAKE) -f $(MAKEFILE_COMMON) $@
+force: ;
