--- a/Makefile.common
+++ b/Makefile.common
@@ -15,6 +15,8 @@ SOURCEDIR := $(WORKDIR)
 VERSION := $(shell cat ../version)
 EPOCH := $(shell cat ../epoch)
 
+DISTFILES_MIRROR := http://sourceforge.net/projects/qubesos/files/distfiles/
+
 RPM_DEFINES := --define "_sourcedir $(SOURCEDIR)" \
 		--define "_specdir $(SPECDIR)" \
 		--define "_builddir $(BUILDDIR)" \
@@ -38,6 +40,11 @@ URL := $(shell spectool $(RPM_DEFINES) --list-files --source 0 $(SPECFILE) 2> /d
 ifndef SRC_FILE
 ifdef URL
 	SRC_FILE := $(notdir $(URL))
+endif
+endif
+ifdef DISTFILES_MIRROR
+ifdef URL
+URL := $(DISTFILES_MIRROR)$(notdir $(URL))
 endif
 endif
 
