--- a/Makefile.common
+++ b/Makefile.common
@@ -60,7 +60,7 @@ endif
 verify-sources:
 # This is a temporary hack, until KDE project starts properly signing their tarballs...
 ifneq ($(SRC_FILE), None)
-	@md5sum --quiet -c sources-$(VERSION)
+	@sha512sum --quiet -c sources-$(VERSION)
 endif
 
 .PHONY: clean-sources
