--- a/Makefile.common
+++ b/Makefile.common
@@ -77,7 +77,7 @@ RPM := rpmbuild
 
 RPM_WITH_DIRS = $(RPM) $(RPM_DEFINES)
 
-rpms: get-sources $(SPECFILE)
+rpms: get-sources verify-sources $(SPECFILE)
 	$(RPM_WITH_DIRS) -bb $(SPECFILE)
 
 rpms-nobuild:
@@ -86,10 +86,10 @@ rpms-nobuild:
 rpms-just-build: 
 	$(RPM_WITH_DIRS) --short-circuit -bc $(SPECFILE)
 
-prep: get-sources $(SPECFILE)
+prep: get-sources verify-sources $(SPECFILE)
 	$(RPM_WITH_DIRS) -bp $(SPECFILE)
 
-srpm: get-sources $(SPECFILE)
+srpm: get-sources verify-sources $(SPECFILE)
 	$(RPM_WITH_DIRS) -bs $(SPECFILE)
 
 verrel:
