plasma-breeze-qubes: fix autostart settings for palette generator
There should be semicolon at the end. Also remove NoDisplay=true to make
debugging easier.

QubesOS/qubes-issues#1784
Reported by: Niels Kobschaetzki <niels@kobschaetzki.net>

--- a/plasma-breeze-qubes/qubes-generate-color-palette.desktop
+++ b/plasma-breeze-qubes/qubes-generate-color-palette.desktop
@@ -3,6 +3,5 @@ Type=Application
 Name=Generate KDE color palete for Qubes windows
 Exec=qubes-generate-color-palette
 StartupNotify=false
-NoDisplay=true
-OnlyShowIn=KDE
+OnlyShowIn=KDE;
 X-KDE-autostart-phase=1
