--- a/qubes-kde-dom0.spec.in
+++ b/qubes-kde-dom0.spec.in
@@ -2,8 +2,8 @@
 
 Name:    qubes-kde-dom0
 Summary: Metapackage for installing all KDE components needed for Qubes Dom0
-Version: 5.12.3
-Release: 3%{?dist}
+Version: @VERSION@
+Release: @REL@%{?dist}
 
 License: GPL2
 URL: http://qubes-os.org
@@ -43,19 +43,23 @@ Requires: qubes-menus
 # Custom Breeze style for Qubes
 Requires: plasma-breeze-qubes
 
-Source0: kfileplaces-bookmarks.xml
-Source1: kickoffrc
-source2: kscreensaverrc
-Source3: plasma-org.kde.plasma.desktop-appletsrc
+Source0: %{name}-%{version}.tar.gz
+Source1: kfileplaces-bookmarks.xml
+Source2: kickoffrc
+source3: kscreensaverrc
+Source4: plasma-org.kde.plasma.desktop-appletsrc
 
 %description
 %{summary}.
 
+%prep
+%setup
+
 %install
-install -D %{SOURCE0} %{buildroot}%{_sysconfdir}/skel/.kde/share/apps/kfileplaces/bookmarks.xml
-install -D %{SOURCE1} %{buildroot}%{_sysconfdir}/skel/.kde/share/config/kickoffrc
-install -D %{SOURCE2} %{buildroot}%{_sysconfdir}/skel/.kde/share/config/kscreensaverrc
-install -D %{SOURCE3} %{buildroot}%{_sysconfdir}/skel/.config/plasma-org.kde.plasma.desktop-appletsrc
+install -D %{SOURCE1} %{buildroot}%{_sysconfdir}/skel/.kde/share/apps/kfileplaces/bookmarks.xml
+install -D %{SOURCE2} %{buildroot}%{_sysconfdir}/skel/.kde/share/config/kickoffrc
+install -D %{SOURCE3} %{buildroot}%{_sysconfdir}/skel/.kde/share/config/kscreensaverrc
+install -D %{SOURCE4} %{buildroot}%{_sysconfdir}/skel/.config/plasma-org.kde.plasma.desktop-appletsrc
 
 %files
 %defattr (-,root,root,-)
@@ -65,7 +69,4 @@ install -D %{SOURCE3} %{buildroot}%{_sysconfdir}/skel/.config/plasma-org.kde.pla
 %{_sysconfdir}/skel/.config/plasma-org.kde.plasma.desktop-appletsrc
 
 %changelog
-* Mon May 24 2010 Joanna Rutkowska <joanna@invisiblethingslab.com>
-- spec file adapted to Qubes OS (based on Fedora spec)
-- based on the original spec from Fedora 12:
-
+@CHANGELOG@
