spec: add BR make

--- a/kde-settings-qubes.spec.in
+++ b/kde-settings-qubes.spec.in
@@ -8,6 +8,8 @@ URL: http://qubes-os.org
 
 BuildArch: noarch
 
+BuildRequires: make
+
 Requires: qubes-desktop-linux-common
 Requires: qubes-artwork
 Requires: kde-filesystem
