Restore original menu layout file
Since using new qubes menu, replacing kickoff's layout is not necessary
anymore. The layout file included here did not work with R4.2's KDE
version (5.27).

Fixes QubesOS/qubes-issues#8159

--- a/kde-settings-qubes.spec.in
+++ b/kde-settings-qubes.spec.in
@@ -78,7 +78,6 @@ Qubes colorful frames for Breeze plasma theme.
 %{_datadir}/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kickoff.js.qubes
 %{_datadir}/plasma/shells/org.kde.plasma.desktop/contents/updates/10-qubes.js
 %{_datadir}/plasma/shells/org.kde.plasma.desktop/contents/updates/qubes-systray.js
-%{_datadir}/plasma/plasmoids/org.kde.plasma.kickoff/contents/ui/FullRepresentation.qml.qubes
 %{_datadir}/kde-settings/kde-profile/default/share/applications/Thunar.desktop
 %{_datadir}/kde-settings/kde-profile/default/share/applications/kde4/Help.desktop
 %{_datadir}/kde-settings/kde-profile/default/share/applications/kde4/knetattach.desktop
@@ -116,9 +115,14 @@ sed -i 's|XDG_MENU_PREFIX="kf5-"|XDG_MENU_PREFIX="kf5-qubes-"|g' /etc/xdg/plasma
 %settings_replace /usr/share/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kickerdash.js.qubes
 %settings_replace /usr/share/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kickoff.js.qubes
 
-%triggerin -- plasma-desktop
-
-%settings_replace /usr/share/plasma/plasmoids/org.kde.plasma.kickoff/contents/ui/FullRepresentation.qml.qubes
+%post
+# it used to be replaced, but now is back to default content - restore it on
+# update
+configfile=/usr/share/plasma/plasmoids/org.kde.plasma.kickoff/contents/ui/FullRepresentation.qml
+backupfile=${configfile}.kde
+if [ -r "$backupfile" ]; then
+    mv -f "$backupfile" "$configfile"
+fi
 
 %changelog
 @CHANGELOG@
