Require kdeplasma-addons for 'quicklauncher' plasmoid
It's used to open qubes app menu.

--- a/kde-settings-qubes.spec.in
+++ b/kde-settings-qubes.spec.in
@@ -18,6 +18,7 @@ Requires: kde-runtime-flags
 Requires: kde-runtime-libs
 Requires: kde-settings
 Requires: kdelibs
+Requires: kdeplasma-addons
 Requires: kscreen
 Requires: ksysguardd
 Requires: oxygen-cursor-themes
