--- a/kde-settings-qubes.spec.in
+++ b/kde-settings-qubes.spec.in
@@ -75,6 +75,7 @@ Qubes colorful frames for Breeze plasma theme.
 %{_sysconfdir}/skel/.kde/share/config/kickoffrc
 %{_sysconfdir}/skel/.kde/share/config/kscreensaverrc
 %{_sysconfdir}/skel/.config/plasma-org.kde.plasma.desktop-appletsrc
+%{_datadir}/qubes/kde-panel-layout.patch
 %{_datadir}/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kicker.js.qubes
 %{_datadir}/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kickerdash.js.qubes
 %{_datadir}/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kickoff.js.qubes
@@ -116,6 +117,13 @@ sed -i 's|XDG_MENU_PREFIX="kf5-"|XDG_MENU_PREFIX="kf5-qubes-"|g' /etc/xdg/plasma
 %settings_replace /usr/share/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kicker.js.qubes
 %settings_replace /usr/share/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kickerdash.js.qubes
 %settings_replace /usr/share/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/plasmoidsetupscripts/org.kde.plasma.kickoff.js.qubes
+
+%triggerin -- plasma-desktop
+default_layout="/usr/share/plasma/layout-templates/org.kde.plasma.desktop.defaultPanel/contents/layout.js"
+if ! grep -q qubesMenu "$default_layout"; then
+    cp -a "$default_layout" "$default_layout.qubes-orig"
+    patch "$default_layout" < /usr/share/qubes/kde-panel-layout.patch
+fi
 
 %post
 # it used to be replaced, but now is back to default content - restore it on
