Set PATH to use Xwayland wrapper
Xwayland wrapper (that preloads shmoverride) is needed for the GUI
daemon to work. Set PATH for the plasma-kwin_wayland service that is
responsible for starting Xwayland.
Unfortunately the systemd service files do not support variable
expansion in Environment= setting, so hardcode original PATH value
too.

QubesOS/qubes-issues#8515

--- a/kde-settings-qubes.spec.in
+++ b/kde-settings-qubes.spec.in
@@ -87,6 +87,7 @@ Qubes colorful frames for Breeze plasma theme.
 %{_datadir}/kde-settings/kde-profile/default/share/config/klipperrc
 %{_datadir}/kde-settings/kde-profile/default/share/config/nepomukserverrc
 %{_datadir}/kde-settings/kde-profile/default/share/kde4/services/kcm_nepomuk.desktop
+/usr/lib/systemd/user/plasma-kwin_wayland.service.d/10-gui-daemon-shmoverride.conf
 
 %files -n plasma-breeze-qubes
 /usr/bin/qubes-generate-color-palette
